# MiniBlog

./: .gitignore  LICENSE  README.md
client/: mainWeb.html  test.vue
server/: .env  Cargo.toml  data.sqlite
server/src/: errors.rs  main.rs
server/src/api/article/: delete.rs  edit.rs  get.rs  mod.rs  new.rs  view.rs
server/src/article/: delete.rs  edit.rs  get.rs  mod.rs  new.rs  view.rs
server/src/models/: article.rs
