[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = {version = "0.4.31",features = ["serde"]}
dotenvy = "0.15.7"
env_logger = "0.10.1"
ntex = { version = "0.7.16", features = ["cookie","tokio"] }
rusqlite = { version = "0.30.0", features = ["chrono","bundled"] }
serde = {version = "1.0.194",features = ["derive"]}
# sqlx = { version = "0.7.3", features = ["sqlite","runtime-tokio","macros","chrono"] }
