[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31",features = ["serde"]}
rusqlite = { version = "0.30.0", features = ["chrono","bundled"] }
serde = {version = "1.0.194",features = ["derive"]}
salvo = { version = "0.59", features = ["affix","serve-static"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = {version = "0.7.4",features = ["sqlite", "runtime-tokio","chrono"]}
futures = "0.3.30"
dotenv = "0.15.0"
